--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@cartridge/connector": "^0.6.0",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "2.2.0",
     "@chakra-ui/react": "2.8.2",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
     "@prisma/client": "^6.4.1",
+    "@react-spring/three": "^9.7.5",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "@starknet-react/chains": "^3.1.2",
     "@starknet-react/core": "^3.7.2",
     "@tanstack/react-query": "^5.66.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.330.0",
@@ -25,7 +31,8 @@
     "prisma": "^6.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "starknet": "^6.23.1"
+    "starknet": "^6.23.1",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/node": "^20",
