feat: agent backend interaction

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,32 +13,32 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "2.2.0",
     "@chakra-ui/react": "2.8.2",
+    "@elizaos/plugin-multiversx": "^0.25.6-alpha.1",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
+    "@multiversx/sdk-core": "13.15.0",
+    "@multiversx/sdk-dapp": "3.0.14",
+    "@multiversx/sdk-native-auth-server": "^1.0.20",
+    "@multiversx/sdk-network-providers": "^2.9.3",
     "@prisma/client": "^6.4.1",
-    "@react-spring/three": "^9.7.5",
-    "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^10.0.4",
-    "@react-three/fiber": "^9.1.0",
-    "@starknet-react/chains": "^3.1.2",
-    "@starknet-react/core": "^3.7.2",
     "@tanstack/react-query": "^5.66.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "busboy": "^1.6.0",
     "date-fns": "^4.1.0",
+    "ethers": "^6.13.5",
     "framer-motion": "^10.18.0",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "prisma": "^6.4.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "starknet": "^6.23.1",
-    "three": "^0.174.0",
-    "@elizaos/plugin-multiversx": "^0.25.6-alpha.1",
-    "@multiversx/sdk-network-providers": "^2.9.3",
-    "@walletconnect/qrcode-modal": "^1.8.0",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "ethers": "^6.13.5",
-    "qrcode.react": "^4.2.0"
+    "streamsearch": "^1.1.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/node": "^20",
