--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@multiversx/sdk-network-providers": "^2.9.3",
     "@prisma/client": "^6.4.1",
     "@tanstack/react-query": "^5.66.0",
+    "@types/papaparse": "^5.3.15",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "busboy": "^1.6.0",
@@ -31,6 +32,7 @@
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "papaparse": "^5.5.2",
     "prisma": "^6.4.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
