feat: final open close orders

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@elizaos/plugin-multiversx": "^0.25.6-alpha.1",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@multiversx/sdk-core": "13.15.0",
+    "@multiversx/sdk-core": "^13.15.0",
     "@multiversx/sdk-dapp": "3.0.14",
     "@multiversx/sdk-native-auth-server": "^1.0.20",
     "@multiversx/sdk-network-providers": "^2.9.3",
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "ethers": "^6.13.5",
     "framer-motion": "^10.18.0",
+    "fs": "^0.0.1-security",
     "lightweight-charts": "^4.2.3",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
